--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,5 +2,5 @@
 - degree: Full Stack Webdeveloper Nanodegree  111
   uni: Udacity 222
   year: June, 2014 &mdash; January, 2015 333
-  # awards:
+  # awards:  2019年4月28日19:47:11
   # summary:444
